--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -61,6 +61,7 @@
     {
       "name": "ApplicationOutput1",
       "type": "CSVMultiline",
+      "disabled": true,
       "rows": [
         {
           "columns": [
