--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,8 +2,8 @@
   "profiles": {
     "Importer": {
       "commandName": "Project",
-      "commandLineArgs": "/c:configurations\\ticks.json",
-      "workingDirectory": "C:\\Source\\Repos\\Importer"
+      "commandLineArgs": "/c:configurations\\apps.json",
+      "workingDirectory": "C:\\temp\\Repos\\Importer"
     }
   }
 }
