--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -24,10 +24,22 @@
         { "name": "WatershedId", "type": "integer" },
         { "name": "FinancialAdvisorId", "type": "integer" }
       ],
+      "references": [
+        { "field": "IntakeId", "reference": "Intake.IntakeId" }
+      ],
       "delimiter": ",",
       "textQualifier": "\"",
       "header": 1,
       "footer": null
+    }, {
+      "name": "Intake",
+      "type": "CSV",
+      "columns": [
+        { "name": "IntakeId", "type": "integer" },
+        { "name": "ApplicationTypeId", "type": "integer" },
+        { "name": "FiscalYearId", "type": "integer" },
+        { "name": "Description", "type": "string" }
+      ]
     }
   ],
   "writers": [
@@ -35,15 +47,15 @@
       "name": "ApplicationOutput",
       "type": "CSV",
       "columns": [
-        {"source": "Application.ApplicationId"},
-        {"source": "Application.OperationId"},
-        {"source": "Application.IntakeId"},
-        {"source": "Application.PremisesIdNumber"},
-        {"source": "Application.PremisesIdNumberOmittedExplanation"},
-        {"source": "Application.ProjectTitle"},
-        {"source": "Application.ProjectDescription"},
-        {"source": "Application.LargeProjectDescription"},
-        {"source": "Application.SummaryDescription"},
+        { "source": "Application.ApplicationId" },
+        { "source": "Application.OperationId" },
+        { "source": "Application.IntakeId" },
+        { "source": "Application.PremisesIdNumber" },
+        { "source": "Application.PremisesIdNumberOmittedExplanation" },
+        { "source": "Application.ProjectTitle" },
+        { "source": "Application.ProjectDescription" },
+        { "source": "Application.LargeProjectDescription" },
+        { "source": "Application.SummaryDescription" },
         { "source": "Application.DateProposedStart", "format": "dd/MMM/yyyy" },
         { "source": "Application.DateProposedEnd", "format": "dd/MMM/yyyy" },
         { "source": "Application.IsEligibilityConfirmed" },
@@ -53,7 +65,8 @@
         { "source": "Application.BmpOtherDescription" },
         { "source": "Application.Score" },
         { "source": "Application.WatershedId" },
-        { "source": "Application.FinancialAdvisorId" }
+        { "source": "Application.FinancialAdvisorId" },
+        { "source": "Intake.Description" }
       ],
       "delimiter": ",",
       "textQualifier": "\""
