--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -124,8 +124,9 @@
     "level": "debug"
   },
   "files": {
-    "Application": "../../apps1.csv",
-    "ApplicationOutput": "../../appsout.csv",
-    "ApplicationOutput1": "../../appsout1.csv"
+    "Application": "../data/application.csv",
+    "Intake": "../data/Intake.csv",
+    "ApplicationOutput": "../data/appsout.csv",
+    "ApplicationOutput1": "../data/appsout1.csv"
   }
 }
