--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -127,7 +127,7 @@
     "Application": "../data/application.csv",
     "Intake": "../data/Intake.csv",
     "ApplicationOutput": "../data/appsout.csv",
-    "ApplicationOutput_Error": "../data/appsout_error.csv",
+    "Error_Output": "../data/appsout_error.csv",
     "ApplicationOutput1": "../data/appsout1.csv"
   }
 }
