--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -6,7 +6,7 @@
       "columns": [
         { "name": "ApplicationId", "type": "integer" },
         { "name": "OperationId", "type": "integer" },
-        { "name": "IntakeId", "type": "integer" },
+        { "name": "IntakeId", "type": "integer", "reference": "Intake.IntakeId" },
         { "name": "PremisesIdNumber", "type": "string" },
         { "name": "PremisesIdNumberOmittedExplanation", "type": "string" },
         { "name": "ProjectTitle", "type": "string" },
