--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -128,7 +128,7 @@
     "level": "debug"
   },
   "files": {
-    "Application": "../data/application.csv",
+    "Application": "../data/app1.csv",
     "Intake": "../data/Intake.csv",
     "ApplicationOutput": "../data/appsout.csv",
     "Error_Output": "../data/appsout_error.csv",
