--- a/Configurations/apps.json
+++ b/Configurations/apps.json
@@ -6,7 +6,7 @@
       "columns": [
         { "name": "ApplicationId", "type": "integer" },
         { "name": "OperationId", "type": "integer" },
-        { "name": "IntakeId", "type": "integer"  },
+        { "name": "IntakeId", "type": "integer" , "reference": "Intake.IntakeId" },
         { "name": "PremisesIdNumber", "type": "string" },
         { "name": "PremisesIdNumberOmittedExplanation", "type": "string" },
         { "name": "ProjectTitle", "type": "string" },
@@ -24,9 +24,6 @@
         { "name": "WatershedId", "type": "integer" },
         { "name": "FinancialAdvisorId", "type": "integer" }
       ],
-      "references": [
-        { "field": "IntakeId", "reference": "Intake.IntakeId" }
-      ],
       "delimiter": ",",
       "textQualifier": "\"",
       "header": 1,
@@ -35,11 +32,7 @@
       "name": "Intake",
       "type": "CSV",
       "columns": [
-        {
-          "name": "IntakeId",
-          "type": "integer",
-          "reference": "Application.IntakeId"
-        },
+        { "name": "IntakeId","type": "integer" },
         { "name": "ApplicationTypeId", "type": "integer" },
         { "name": "FiscalYearId", "type": "integer" },
         { "name": "Description", "type": "string" }
